--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,8 @@
     "config": {
         "allow-plugins": {
             "phpstan/extension-installer": true
-        }
+        },
+        "sort-packages": true
     },
     "scripts": {
         "git-pre-commit": [],
