--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,10 @@
         "textcontrol/textcontrol-reportingcloud": "^1.0"
     },
     "require-dev": {
+        "ctw/ctw-qa": "^1.0",
         "phpstan/extension-installer": "^1.1",
         "phpstan/phpstan": "^1.7",
+        "phpstan/phpstan-phpunit": "^1.1",
         "phpstan/phpstan-strict-rules": "^1.3",
         "phpunit/phpunit": "^10.0",
         "squizlabs/php_codesniffer": "^3.6",
@@ -42,18 +44,23 @@
         "sort-packages": true
     },
     "scripts": {
-        "git-pre-commit": [],
-        "git-pre-push": [],
-        "phpcbf": "vendor/bin/phpcbf",
-        "phpcs": "vendor/bin/phpcs",
-        "phpstan": "rm -fr build/phpstan && mkdir -p build/phpstan && vendor/bin/phpstan analyse --error-format=raw | tee build/phpstan/output.txt",
-        "phpstan-baseline": "vendor/bin/phpstan analyse --generate-baseline",
+        "ecs": "php vendor/bin/ecs --clear-cache",
+        "ecs-fix": "php vendor/bin/ecs --clear-cache --fix",
+        "phpstan": "d=build/phpstan ; rm -fr $d ; mkdir -p $d ; php vendor/bin/phpstan analyse --error-format=raw | tee $d/output.txt",
+        "phpstan-baseline": "php vendor/bin/phpstan analyse --generate-baseline",
         "qa": [
-            "@phpcbf",
-            "@phpcs",
+            "@rector",
+            "@ecs",
+            "@phpstan"
+        ],
+        "qa-fix": [
+            "@rector-fix",
+            "@ecs-fix",
             "@phpstan",
             "@test"
         ],
-        "test": "vendor/bin/phpunit"
+        "rector": "php vendor/bin/rector process --clear-cache --dry-run",
+        "rector-fix": "php vendor/bin/rector process --clear-cache",
+        "test": "php vendor/bin/phpunit"
     }
 }
