--- a/composer.json
+++ b/composer.json
@@ -10,22 +10,22 @@
         "module"
     ],
     "require": {
-        "php": "^8.1",
+        "php": "^8.3",
         "laminas/laminas-mvc": "^3.3",
         "laminas/laminas-servicemanager": "^3.12",
         "laminas/laminas-view": "^2.20",
         "psr/container": "^1.0 || ^2.0",
-        "textcontrol/textcontrol-reportingcloud": "^4.0"
+        "textcontrol/textcontrol-reportingcloud": "dev-php83"
     },
     "require-dev": {
-        "ctw/ctw-qa": "^1.0",
+        "ctw/ctw-qa": "dev-php83",
         "phpstan/extension-installer": "^1.1",
         "phpstan/phpstan": "^1.7",
         "phpstan/phpstan-phpunit": "^1.1",
         "phpstan/phpstan-strict-rules": "^1.3",
         "phpunit/phpunit": "^10.0",
         "squizlabs/php_codesniffer": "^3.6",
-        "symfony/var-dumper": "^6.0"
+        "symfony/var-dumper": "^7.0"
     },
     "autoload": {
         "psr-4": {
