Refactoring for PHP 8.3

--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,4 @@
-{  "minimum-stability": "dev",  
+{  "minimum-stability": "dev", "prefer-stable": true,  
     "name": "textcontrol/textcontrol-laminas-reportingcloud",
     "description": "Laminas Module (formerly Zend Framework 3 Module) for ReportingCloud Web API. Authored and supported by Text Control GmbH.",
     "license": "BSD-3-Clause",
