--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,4 @@
-{  "minimum-stability": "dev", "prefer-stable": true,  
+{
     "name": "textcontrol/textcontrol-laminas-reportingcloud",
     "description": "Laminas Module (formerly Zend Framework 3 Module) for ReportingCloud Web API. Authored and supported by Text Control GmbH.",
     "license": "BSD-3-Clause",
@@ -27,6 +27,8 @@
         "squizlabs/php_codesniffer": "^3.6",
         "symfony/var-dumper": "^7.0"
     },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "autoload": {
         "psr-4": {
             "TextControl\\Laminas\\ReportingCloud\\": "src/"
