--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "textcontrol/textcontrol-reportingcloud": "dev-php83"
     },
     "require-dev": {
-        "ctw/ctw-qa": "dev-php83",
+        "ctw/ctw-qa": "^4.0",
         "phpstan/extension-installer": "^1.1",
         "phpstan/phpstan": "^1.7",
         "phpstan/phpstan-phpunit": "^1.1",
