--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "laminas/laminas-servicemanager": "^3.12",
         "laminas/laminas-view": "^2.20",
         "psr/container": "^1.0 || ^2.0",
-        "textcontrol/textcontrol-reportingcloud": "dev-php83"
+        "textcontrol/textcontrol-reportingcloud": "^2.0"
     },
     "require-dev": {
         "ctw/ctw-qa": "^4.0",
